fix display of covers

--- a/routes/album/index/style.css
+++ b/routes/album/index/style.css
@@ -6,8 +6,7 @@
 .album{display:block;width:200px;height:210px;padding:10px 10px 20px 10px;visibility:hidden;}
 .album-cover{height:180px;position:relative;text-align:center;line-height:180px;font-size:20px;}
 .album-cover-media{box-shadow:0px 0px 2px #333;position:absolute;-webkit-backface-visibility:hidden;background-color:#d8d8d8;}
-.album-name{height:20px;line-height:20px;text-align:center;text-decoration:none;color:#5c5c5c;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;background-color:#c7dae2;}
-.album-name{font-size:14px;background-color:#e68749;color:#fff;border:3px solid #e46e3f;border-left:none;border-right:none;}
+.album-name{position:relative;height:20px;line-height:20px;text-align:center;text-decoration:none;color:#fff;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;background-color:#e68749;font-size:14px;border:3px solid #e46e3f;border-left:none;border-right:none;}
 /*
 .album{position:absolute;color:#5c5c5c;-webkit-text-fill-color:transparent;display:block;width:200px;height:150px;font-size:20px;font-family:Verdana;font-weight:bold;text-transform:uppercase;background-color:#ccc;}
 .album-name-shadow{display:inline-block;padding:0px 5px 3px 5px;position:absolute;left:3px;top:3px;background-color:#fff;text-shadow:0px 1px 1px #a5a5a5;margin-right:8px;box-shadow:0px 0px 5px #535353;}
@@ -18,6 +17,7 @@
 .media{display:block;overflow:hidden;background-color:#cecece;visibility:hidden;}
 .media>img{margin:0px;border:0px;vertical-align:bottom;width:100%;height:100%;}
 .media-video-play{position:absolute;width:125px;height:125px;background-image:url('video-play.png');}
+.media-video-play-cover{position:absolute;width:50px;height:50px;background-image:url('video-play-cover.png');}
 
 #slideshow{position:absolute;left:0px;top:0px;display:none;}
 #slideshow-media{position:absolute;left:0px;top:0px;background-color:#252525;}
